# No-Code-AI

./: .buildinfo  .gitignore  README.md  app.py  build_docs.sh  docs.txt  flask_app.py  genindex.html  index.html  interpretability.py  label_encoding_items.json  main_streamlit2.py  model.pkl  model_utils.py  models.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  static.txt  streamlit_app2.py  test.ipynb  testy.ipynb  tox.ini  utils.py
.github/: dependabot.yml
.github/workflows/: dependabot.yml  docs.yml  static.yml  tests.yml
_sources/: index.rst.txt
docs/: Makefile  conf.py
docs/meta/: conf.py  index.rst
docs/source/: insight.rst
docs/test/: test.rst
source/: insight.html
src/: interpretability.py  model_utils.py  models.py  ts_models.py
src/insight/: interpretability.py  model_utils.py  models.py  ts_models.py  utils.py
static/css/: custom.css
templates/: analysis.html  base.html  home.html  upload.html
test/: test.html  test_insight.py  test_utils.py
