[metadata]
name = insight
version = 0.0.1
description = A quick streamlit demo with multiple models
long_description = file: README.md
long_description_content_type = text/markdown
author = Amr Elagoz
author_email = amrahmedelagoz@gmail.com
url = https://github.com/AmrAhmedElagoz/streamlit_app
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
keywords = machine learning, python

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

install_requires=
    pandas==2.2.3
    scikit-learn==1.6.1
    xgboost==2.1.4
    tqdm==4.67.1
    matplotlib==3.10.0
    shap==0.46.0
    numpy==2.0.2
    plotly==6.0.0
    prophet==1.1.6
    seaborn==0.13.2
    scipy==1.15.2
    yellowbrick==1.5
    tabulate==0.9.0
    setuptools==75.8.2


[options.packages.find]
where = src
exclude =
    test

[options.extras_require]
testing =
    pytest==8.3.4
    Sphinx==8.1.3
    sphinx-rtd-theme==3.0.2
    sphinx-autodoc-typehints==2.5.0
    pytest-cov==6.0.0
    mypy==1.13.0
    flake8==7.1.1
    tox==4.23.2
    black==24.10.0
    pytest-mock==3.14.0
    pytest-watcher==0.4.3
    autopep8==2.3.2

[options.package_data]
insight = py.typed


[flake8]
max-line-length = 160
extend-ignore = E712
